tests/spec/build/snapshots/slice_map_with_different_output_type.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

func main() {
	nums := []int{1, 2, 3}
	strs := make([]string, len(nums))
	for i, x := range nums {
		strs[i] = fmt.Sprintf("n=%d", x)
	}
	for _, s := range strs {
		fmt.Println(s)
	}
}
