tests/spec/build/snapshots/snake_case_alias_typed_value_gets_comma_ok_adapter.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"crypto/tls"
	lisette "github.com/ivov/lisette/prelude"
)

type CacheBase struct{}

func (c CacheBase) Get(_ string) *tls.ClientSessionState {
	return nil
}

func (c CacheBase) Put(_ string, _ *tls.ClientSessionState) {}

type MyCache = CacheBase

func main() {
	c := CacheBase{}
	_ = _lisAdapter_CacheBase_ClientSessionCache_0{inner: c}
}

type _lisAdapter_CacheBase_ClientSessionCache_0 struct {
	inner MyCache
}

func (a _lisAdapter_CacheBase_ClientSessionCache_0) Put(arg0 string, arg1 *tls.ClientSessionState) {
	a.inner.Put(arg0, arg1)
}

func (a _lisAdapter_CacheBase_ClientSessionCache_0) Get(arg0 string) (*tls.ClientSessionState, bool) {
	raw := a.inner.Get(arg0)
	option := lisette.OptionFromNilable[*tls.ClientSessionState](raw, raw == nil)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal, true
	}
	return nil, false
}
