tests/spec/build/snapshots/snake_case_enum_impl_satisfies_comma_ok_go_iface_via_adapter.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"crypto/tls"
	lisette "github.com/ivov/lisette/prelude"
)

func MakeCacheKindMem() CacheKind {
	return CacheKind{Tag: CacheKindMem}
}

type CacheKindTag uint8

const (
	CacheKindMem CacheKindTag = iota
)

type CacheKind struct {
	Tag CacheKindTag
}

func (c CacheKind) Get(_ string) *tls.ClientSessionState {
	return nil
}

func (c CacheKind) Put(_ string, _ *tls.ClientSessionState) {}

func useCache(_ tls.ClientSessionCache) {}

func main() {
	useCache(_lisAdapter_CacheKind_ClientSessionCache_0{inner: MakeCacheKindMem()})
}

type _lisAdapter_CacheKind_ClientSessionCache_0 struct {
	inner CacheKind
}

func (a _lisAdapter_CacheKind_ClientSessionCache_0) Put(arg0 string, arg1 *tls.ClientSessionState) {
	a.inner.Put(arg0, arg1)
}

func (a _lisAdapter_CacheKind_ClientSessionCache_0) Get(arg0 string) (*tls.ClientSessionState, bool) {
	raw := a.inner.Get(arg0)
	option := lisette.OptionFromNilable[*tls.ClientSessionState](raw, raw == nil)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal, true
	}
	return nil, false
}
