tests/spec/build/snapshots/snake_case_impl_satisfies_comma_ok_go_iface_via_adapter.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	"crypto/tls"
	lisette "github.com/ivov/lisette/prelude"
)

type MyCache struct{}

func (m MyCache) Get(_ string) *tls.ClientSessionState {
	return nil
}

func (m MyCache) Put(_ string, _ *tls.ClientSessionState) {}

func useCache(_ tls.ClientSessionCache) {}

func main() {
	c := MyCache{}
	useCache(_lisAdapter_MyCache_ClientSessionCache_0{inner: c})
}

type _lisAdapter_MyCache_ClientSessionCache_0 struct {
	inner MyCache
}

func (a _lisAdapter_MyCache_ClientSessionCache_0) Put(arg0 string, arg1 *tls.ClientSessionState) {
	a.inner.Put(arg0, arg1)
}

func (a _lisAdapter_MyCache_ClientSessionCache_0) Get(arg0 string) (*tls.ClientSessionState, bool) {
	raw_1 := a.inner.Get(arg0)
	option_2 := lisette.OptionFromNilable[*tls.ClientSessionState](raw_1, raw_1 == nil)
	if option_2.Tag == lisette.OptionSome {
		return option_2.SomeVal, true
	}
	return nil, false
}
