tests/spec/build/snapshots/snake_case_impl_satisfies_pascal_case_lisette_iface.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

type Runner interface {
	Run() int
}

type Job struct{}

func (j Job) Run() int {
	return 1
}

func useIt(r Runner) int {
	return r.Run()
}

func main() {
	useIt(Job{})
}
