tests/spec/build/snapshots/spread_slice_into_variadic_generic_method_param_adapts_each_element.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

type Face interface {
}

func Resultant(arg int) (int, Face) {
	return arg, nil
}

type Holder struct{}

func Holder_Resolve[R any, E any](_ Holder, default_ R, _ ...func(int) lisette.Result[R, E]) lisette.Result[R, E] {
	return lisette.MakeResultOk[R, E](default_)
}

func main() {
	fns := []func(int) (int, Face){Resultant}
	src := fns
	adapted := make([]func(int) lisette.Result[int, Face], len(src))
	for i, cb := range src {
		cb_1 := cb
		adapted[i] = func(arg0 int) lisette.Result[int, Face] {
			ret, ret_1 := cb_1(arg0)
			if ret_1 != nil {
				return lisette.MakeResultErr[int, Face](ret_1)
			}
			return lisette.MakeResultOk[int, Face](ret)
		}
	}
	rez := Holder_Resolve[int, Face](Holder{}, 0, adapted...)
	_ = rez
}
