tests/spec/build/snapshots/static_method_name_casing_consistency.snap
---
source: tests/spec/build/mod.rs
---
// === api/lib.go ===
package api

type Service struct {
	Name string
}

func Service_New(name string) Service {
	return Service{Name: name}
}


// === main.go ===
package main

import "github.com/user/myproject/api"

type Helper struct {
	value int
}

func Helper_New(v int) Helper {
	return Helper{value: v}
}

func main() {
	svc := api.Service_New("test")
	h := Helper_New(42)
	_ = svc.Name
	_ = h.value
}
