tests/spec/build/snapshots/strings_index_lowers_sentinel_to_option.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"strings"
)

func find(haystack, needle string) int {
	ret := strings.Index(haystack, needle)
	option := lisette.OptionFromCommaOk[int](ret, ret != -1)
	if option.Tag == lisette.OptionSome {
		return option.SomeVal
	}
	return -2
}

func main() {
	find("hello", "lo")
}
